# molSimplify

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: codeql-config.yml
.github/workflows/: CI.yaml  build.yaml  codeql.yml  pre-commit.yaml  pytest.yaml  pytest_pip.yaml  python-linter.yaml
devtools/conda-envs/: README.md  mols.yml  mols_minimal.yml
docs/: environment.yaml
docs/source/: Citation.rst  Classes.rst  Informatics.rst  conf.py  index.rst
molSimplify/: __main__.py
molSimplify/Classes/: README.md  atom3D.py  dft_obs.py  globalvars.py  helpers.py  ligand.py  mGUI.py  mol2D.py  mol3D.py  monomer3D.py  protein3D.py
molSimplify/Informatics/: GeoFreeRAC.ipynb  RACassemble.py  autocorrelation.py  bridge_functionalizer.py  clean_autocorrelation.py  decoration_manager.py  graph_analyze.py  graph_racs.py  jupyter_vis.py  lacRACAssemble.py  misc_descriptors.py  organic_fingerprints.py
molSimplify/Ligands/: README  cyanate.xyz  ligands.dict  pf3.mol2
molSimplify/Scripts/: addtodb.py  cellbuilder.py  cellbuilder_tools.py  chains.py  dbinteract.py  distgeom.py  findcorrelations.py  generator.py  geometry.py  inparse.py  io.py  isomers.py  jobgen.py  krr_prep.py  nn_prep.py  nx_helpers.py  oct_check_mols.py  postmold.py  postmwfn.py  postparse.py  postproc.py  qcgen.py  rmsd.py  rungen.py  structgen.py  tf_nn_prep.py  tsgen.py
molSimplify/job_manager/: manager_io.py  moltools.py  populate_jobs.py  tools.py
molSimplify/ml/: layers.py
molSimplify/python_krr/: sklearn_models.py
molSimplify/python_nn/: ANN.py  clf_analysis_tool.py  ensemble_test.py  tf_ANN.py
molSimplify/utils/: metaclasses.py  tensorflow.py  timer.py
tests/: README.txt  generateTests.py  helperFuncs.py  test_Mol2D.py  test_atom3D.py  test_autocorrelation.py  test_basic_imports.py  test_bidentate.py  test_cli.py  test_decoration.py  test_example_1.py  test_example_3.py  test_example_5.py  test_example_7.py  test_ff_xtb.py  test_geocheck_oct.py  test_geometry.py  test_inparse.py  test_io.py  test_joption_pythonic.py  test_lig_load.py  test_ligand_assign_consistent.py  test_ligand_from_mol_file.py  test_ligands.py  test_mol3D.py  test_qcgen.py  test_rmsd.py  test_structgen_functions.py  test_tetrahedral.py  test_tutorial_10_part_one.py  test_tutorial_10_part_two.py  test_tutorial_2.py  test_tutorial_4.py  test_tutorial_qm9_part_one.py
tests/informatics/: test_MOF_descriptors.py  test_MOF_functional_group_add.py  test_PBC_functions.py  test_active_learning.py  test_coulomb_analyze.py  test_graph_racs.py
tests/inputs/: bidentate_v3.in  cr3_f6_optimization.xyz  example_3.in  example_5.in  example_5_v3.in  example_7.in  example_8.in  example_tbp.in  ligand_from_mol_file.in  molcas_caspt2.in  old_ANN.in  tutorial_09_part_two.in
tests/refs/: example_3.xyz  example_5_v3_noff.xyz  joption_pythonic_jobscript  ligand_from_mol_file.report  orca_ccsdt.report  orca_ccsdt.xyz  tutorial_09_part_two.xyz  tutorial_3.report  xtb_bipy_spin5.xyz
workflows/NandyJACSAu2022/: GeoFreeRAC.ipynb  frag_functionalizer.py
(+538 files in other folders)
